--- a/sass/main.css
+++ b/sass/main.css
@@ -560,7 +560,7 @@ body {
   float: right;
   list-style: none; }
   .bo-header__nav li {
-    float: right;
+    float: left;
     font-size: 16px;
     font-weight: 400;
     margin-left: 10px; }
@@ -581,7 +581,8 @@ body {
 
 .bo-hello__info {
   color: #ffffff;
-  text-align: center; }
+  text-align: center;
+  padding-top: 50px; }
   .bo-hello__info h1 {
     font-family: "Source Sans Pro", sans-serif;
     font-size: 35px;
