--- a/sass/main.css
+++ b/sass/main.css
@@ -582,7 +582,8 @@ body {
 .bo-hello__info {
   color: #ffffff;
   text-align: center;
-  padding-top: 50px; }
+  padding-top: 50px;
+  overflow: hidden; }
   .bo-hello__info h1 {
     font-family: "Source Sans Pro", sans-serif;
     font-size: 35px;
@@ -593,18 +594,8 @@ body {
     padding: 180px 0 10px; }
   .bo-hello__info p {
     padding-bottom: 319px;
-    font-size: 16px;
-    animation-name: cafe;
-    animation-duration: 2s;
-    animation-delay: 1s; }
+    font-size: 16px; }
 
-@keyframes cafe {
-  0% {
-    color: #ffffff; }
-  50% {
-    color: #19bd9a; }
-  100% {
-    color: #ffffff; } }
 .animated.fadeInDown {
   animation-duration: 2s;
   animation-delay: 1s;
@@ -855,16 +846,14 @@ body {
   background: #ffffff;
   border: 1px solid #000;
   position: absolute;
-  z-index: -1;
-  opacity: 0;
-  transition: opacity 0.5s ease; }
+  z-index: -2;
+  opacity: 0; }
   #bo-header-show-menu .icon-bars {
     font-size: 20px; }
 
 @media (max-width: 1100px) {
   .bo-header__nav {
-    width: 60%;
-    margin-left: 20%; }
+    max-width: 100%; }
 
   .portfolio-info p {
     padding: 15px 0;
@@ -940,13 +929,13 @@ body {
 
   #bo-header-show-menu {
     position: relative;
-    z-index: 1;
     border-radius: 9px;
     background: #f5f5f5;
     width: 40px;
     height: 40px;
     outline: none;
     opacity: .5;
+    z-index: 1;
     transition: opacity 0.6s ease; }
 
   .bo-header .bo-header__nav {
@@ -963,7 +952,8 @@ body {
     padding: 10px; }
 
   .bo-header .bo-header__nav li a {
-    padding: .5rem; }
+    padding: .5rem;
+    opacity: .8; }
 
   .bo-header .bo-header__nav li a:hover {
     border: 1px solid transparent; }
@@ -971,12 +961,8 @@ body {
   #bo-header-show-menu.open + .bo-header__nav {
     transform: translateY(0%);
     z-index: 1;
-    border-radius: .7rem; }
-
-  .bo-header__nav.animation {
+    border-radius: .7rem;
     transition: transform 2s ease; }
-    .bo-header__nav.animation a {
-      opacity: .8; }
 
   .animated.fadeInDown {
     animation-duration: 0s; }
